--- a/htmls/properties.html
+++ b/htmls/properties.html
@@ -16,7 +16,7 @@
 		<div class="container">
 				<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				CSS参考手册&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<strong class="has-text-info">CSS参考手册</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -3086,6 +3086,11 @@
 		      </nav>
 		    </div>
 		  </article>
+		</div>
+		<div class="toTop">
+			<button class="button is-primary is-large">
+				<i class="fa fa-2x fa-arrow-circle-o-up"></i>
+			</button>
 		</div>
 	  </div>
 		<script src="../js/clipboard.min.js"></script>
