--- a/htmls/branchhtmls/bottom.html
+++ b/htmls/branchhtmls/bottom.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				bottom
+				<strong class="has-text-info">bottom</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -217,6 +217,11 @@
 		      </nav>
 		    </div>
 		  </article>
+		</div>
+		<div class="toTop">
+			<button class="button is-primary is-large">
+				<i class="fa fa-2x fa-arrow-circle-o-up"></i>
+			</button>
 		</div>
 
 		</div>
