--- a/htmls/branchhtmls/overflow.html
+++ b/htmls/branchhtmls/overflow.html
@@ -22,7 +22,7 @@
 			    		<i class="fa fa-caret-up"></i>
 			    	</span>
 			    </a>
-				<a class="button is-pulled-right" href="../quicksearch.html">上页</a>
+				<a class="button is-pulled-right" href="javascript:history.go(-1)">上页</a>
 			</p>
 			<a class="panel-block m-background">
 				 <span>语法：</span>  
