--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -63,17 +63,17 @@
 				 <span>外补白 Margin</span>  
 			</a>
 			<p class="panel-block">
-			    <a>margin</a>
-			    <a>margin-top</a>
-			    <a>margin-right</a>
-			    <a>margin-bottom</a>
-			    <a>margin-left</a>
+			    <a href="branchhtmls/margin.html">margin</a>
+			    <a href="branchhtmls/margin-top.html">margin-top</a>
+			    <a href="branchhtmls/margin-right.html">margin-right</a>
+			    <a href="branchhtmls/margin-bottom.html">margin-bottom</a>
+			    <a href="branchhtmls/margin-left.html">margin-left</a>
 			</p>
 			<a class="panel-block m-background">
 				 <span>内补白 Padding</span>  
 			</a>
 			<p class="panel-block">
-			    <a>padding</a>
+			    <a href="branchhtmls/padding.html">padding</a>
 			    <a>padding-top</a>
 			    <a>padding-right</a>
 			    <a>padding-bottom</a>
